src/test/ui/suggestions/into-str.stderr
error[E0277]: the trait bound `&str: std::convert::From<std::string::String>` is not satisfied
  --> $DIR/into-str.rs:4:5
   |
LL | fn foo<'a, T>(_t: T) where T: Into<&'a str> {}
   |    ---                        ------------- required by this bound in `foo`
...
LL |     foo(String::new());
   |     ^^^ the trait `std::convert::From<std::string::String>` is not implemented for `&str`
   |
   = note: to coerce a `std::string::String` into a `&str`, use `&*` as a prefix
   = note: `std::convert::From<std::string::String>` is implemented for `&mut str`, but not for `&str`
   = note: required because of the requirements on the impl of `std::convert::Into<&str>` for `std::string::String`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
